(bf) Try to resolve problems on iOS (don't flip - backface visibility ?)

--- a/style.css
+++ b/style.css
@@ -47,6 +47,10 @@ body {
   width: 100%;
   height: 100%;
   background-color: #f1f1f1;
+  -webkit-perspective: 0;
+  -webkit-backface-visibility: hidden;
+  -webkit-transform: translate3d(0,0,0);
+  visibility:visible;
   backface-visibility: hidden;
 }
 
